--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,9 +15,12 @@ android {
     }
 }
 
-buildscript {
+allprojects {
     repositories {
-        mavenCentral()
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url "../../../node_modules/react-native/android"
+        }
     }
 }
 
